Sat Jan 30  5:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Tidying up brain-damaged changes I made while ill.
	src/NSConnection.m: Tidied proxy handling a bit
	src/NSDistantObject.m: Tidied  - made closer to OpenStep spec.

Fri Jan 29 11:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSArchiver.m: Implemented ([-encodeDataObject:])
	* src/NSUnarchiver.m: Implemented ([-decodeDataObject])

1999-01-28  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile (SUBPROJECTS): Change directory names
	* configure.in: Update for new directories.

Thu Jan 28 16:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/include/NSObject.h: Preliminaries for addition of GC
	* src/include/NSZone.h: ditto
	* src/NSObject.m: ditto
	* src/NSZone.m: ditto

Thu Jan 28 11:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/include/GSConfig.h.in: Added gsaddr type - integer with same
	size as a pointer.
	* configure.in: Added gsaddr type and fixed a coiuple of typos.
	* src/NSUnarchiver.m: include NSByteOrder.h

Thu Jan 28  9:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/Makefile.postamble: Tidied distclean stuff - suggested by
	jagapen@whitewater.chem.wisc.edu

Wed Jan 27 12:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* configure.n: More type-size stuff
	* src/include/GSConfig.h.in: More type-size stuff
	* src/include/NSData.h: Changed GNUstep extensions and added constants
	for coder support.
	* src/include/NSArchiver.h: Changes for handling systems with differing
	type sizes.
	* src/include/NSByteOrder.h: Changes and additions for handling systems
	with differing type sizes.
	* src/NSData.m: Changed GNUstep extensions for coder support in order
	to make handling of type-size information easier.
	* src/NSArchiver.m: Encode type-size info and write more efficiently.
	* src/NSUnarchiver.m: Decode type-size info.